--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--font awesome library-->
   <link rel="stylesheet" href="css/all.min.css"/>
   <!-- Main tamplet css file -->
-  <link rel="stylesheet" href="css/Naruto.css"/>
+  <link rel="stylesheet" href="css/naruto.css"/>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
